feat: 부모 카테고리 삭제시 자식 카테고리도 삭제되도록 로직 수정
- CategoryService 에서 삭제 로직 변경
- CategoryServiceTest에 추가
- CategoryService Refacotring